--- a/install-ingress-nginx/index.html
+++ b/install-ingress-nginx/index.html
@@ -1,5 +1,15 @@
 <html>
     <body>
         <h1>Bienvenue sur le cluster k8sBfr</h1>
+        <table>
+            <th>
+                <td>lien</td>
+                <td>description</td>
+            </th>
+            <tr>
+                <td><a href="k8sbfr.zaoto.org/popote">popote</a></td>
+                <td>Site de gestion de recettes de cuisine</td>
+            </tr>
+        </table>
     </body>
 </html>
