--- a/install-ingress-nginx/index.html
+++ b/install-ingress-nginx/index.html
@@ -3,9 +3,9 @@
         <h1>Bienvenue sur le cluster k8sBfr</h1>
         <table>
             <th>
-                <td>lien</td>
-                <td>description</td>
-            </th>
+                <th>lien</th>
+                <th>description</th>
+            </tr>
             <tr>
                 <td><a href="k8sbfr.zaoto.org/popote">popote</a></td>
                 <td>Site de gestion de recettes de cuisine</td>
