--- a/install-ingress-nginx/index.html
+++ b/install-ingress-nginx/index.html
@@ -7,7 +7,7 @@
                 <th>description</th>
             </tr>
             <tr>
-                <td><a href="k8sbfr.zaoto.org/popote">popote</a></td>
+                <td><a href="popote">popote</a></td>
                 <td>Site de gestion de recettes de cuisine</td>
             </tr>
         </table>
