--- a/install-ingress-nginx/index.html
+++ b/install-ingress-nginx/index.html
@@ -10,6 +10,10 @@
                 <td><a href="popote">popote</a></td>
                 <td>Site de gestion de recettes de cuisine</td>
             </tr>
+            <tr>
+                <td><a href="hello">hello</a></td>
+                <td>application de test qui affiche heure et date</td>
+            </tr>
         </table>
     </body>
 </html>
